# sha2-const

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml  main.yml  publish.yml
src/: constants.rs  lib.rs  sha.rs  util.rs
tests/: proptest.rs  test_vectors.rs
