[package]
name = "sha2-const"
version = "0.1.0"
authors = ["Saleem Rashid <dev@saleemrashid.com>"]
edition = "2018"
description = "const fn implementation of the SHA-2 family of hash functions"
readme = "README.md"
repository = "https://github.com/saleemrashid/sha2-const"
license = "MIT OR Apache-2.0"
keywords = ["crypto"]
categories = ["cryptography", "no-std"]

[dependencies]

[dev-dependencies]
hex = "0.4.2"
proptest = "0.9.6"
sha2 = "0.8.1"
